examples/compose/spiffe-envoy/envoy.yaml
node:
  id: docker-compose-spiffe-envoy
  cluster: airlock

static_resources:
  listeners:
    - name: airlock_http_proxy
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: airlock_spiffe_envoy
                route_config:
                  name: airlock_spiffe_envoy_route
                  virtual_hosts:
                    - name: outbound
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: echo_upstream
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      failure_mode_allow: false
                      grpc_service:
                        envoy_grpc:
                          cluster_name: airlock_worker
                        timeout: 2s
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SKIP
                        request_body_mode: NONE
                        response_body_mode: NONE
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: airlock_worker
      type: STRICT_DNS
      connect_timeout: 1s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: airlock_worker
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: proxy-worker
                      port_value: 50051

    - name: echo_upstream
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 1s
      load_assignment:
        cluster_name: echo_upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: echo
                      port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
